@@ -14,3 +14,4 @@
                              the same way no matter the game we are running
 31/12/2014 - 1.1.6 - Fenix - updated path to SQL update script
 05/01/2014 - 1.1.7 - Fenix - added routine to perform B3 directory cleaning after successful update install
+06/04/2015 - 1.2   - Fenix - added backup utility
